--- a/CookPal/app/src/main/res/layout/custom_drawer_item.xml
+++ b/CookPal/app/src/main/res/layout/custom_drawer_item.xml
@@ -6,43 +6,43 @@
     <LinearLayout
         android:id="@+id/itemLayout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:orientation="vertical"
-
         android:layout_marginTop="0dp"
         android:background="?android:attr/activatedBackgroundIndicator"
     >
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="55dp"
-            >
+        <RelativeLayout
+            android:layout_width="220dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/drawer_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_gravity="left"
+                android:background="#DDDDDD"/>
 
             <TextView
                 android:id="@+id/drawer_itemName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="180dp"
+                android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="2dp"
+                android:padding="5dp"
+                android:layout_toRightOf="@id/drawer_icon"
+                android:background="#DDDDDD"
+                android:gravity="left"
                 />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="#DADADC"
-            ></View>
+        </RelativeLayout>
 
     </LinearLayout>
 
