--- a/CookPal/app/src/main/res/layout/custom_drawer_item.xml
+++ b/CookPal/app/src/main/res/layout/custom_drawer_item.xml
@@ -22,26 +22,30 @@
 
             <ImageView
                 android:id="@+id/drawer_icon"
-                android:layout_width="40dp"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="0dp"
                 android:layout_gravity="left"
-                android:background="#DDDDDD"/>
+                android:background="#97B764"/>
 
             <TextView
                 android:id="@+id/drawer_itemName"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="2dp"
-                android:padding="5dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginLeft="3dp"
                 android:layout_toRightOf="@id/drawer_icon"
-                android:background="#DDDDDD"
+                android:background="#97B764"
+                android:textColor="#FFFFFF"
                 android:gravity="left"
-                />
+                android:text="cookbook"
+                android:paddingTop="7dp"
+                android:paddingBottom="5dp"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp" />
         </RelativeLayout>
 
     </LinearLayout>
