got rid of blue highlight when selecting button from nav drawer

--- a/CookPal/app/src/main/res/layout/custom_drawer_item.xml
+++ b/CookPal/app/src/main/res/layout/custom_drawer_item.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentLeft="true"
         android:orientation="vertical"
         android:layout_marginTop="0dp"
-        android:background="?android:attr/activatedBackgroundIndicator"
+        android:background="@android:color/transparent"
     >
 
         <RelativeLayout
