--- a/CookPal/app/src/main/res/layout/custom_drawer_item.xml
+++ b/CookPal/app/src/main/res/layout/custom_drawer_item.xml
@@ -22,14 +22,15 @@
 
             <ImageView
                 android:id="@+id/drawer_icon"
+                android:background="@drawable/drawer_item_selector"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_margin="0dp"
-                android:layout_gravity="left"
-                android:background="#97B764"/>
+                android:layout_gravity="left"/>
 
             <TextView
                 android:id="@+id/drawer_itemName"
+                android:background="@drawable/drawer_item_selector"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -38,7 +39,6 @@
                 android:layout_marginRight="0dp"
                 android:layout_marginLeft="3dp"
                 android:layout_toRightOf="@id/drawer_icon"
-                android:background="#97B764"
                 android:textColor="#FFFFFF"
                 android:gravity="left"
                 android:text="cookbook"
