--- a/CookPal/app/src/main/res/layout/activity_recipe.xml
+++ b/CookPal/app/src/main/res/layout/activity_recipe.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".GroceryList">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v4.view.ViewPager>
 
     <FrameLayout
         android:id="@+id/content_frame"
