UI done but crashes when navdrawer hits assistant button now

--- a/CookPal/app/src/main/res/layout/activity_assistant.xml
+++ b/CookPal/app/src/main/res/layout/activity_assistant.xml
@@ -3,22 +3,95 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+<!--
+    <RelativeLayout
+        android:id="@+id/assistant_page"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:orientation="vertical"
+        android:layout_marginTop="0dp"
+        android:background="@android:color/transparent"
+        >
 
-    <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <RelativeLayout
+            android:id="@+id/assistant_stepHeader"
+            android:layout_width="match_parent"
+            android:layout_height="80dp">
 
-    <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="#ffff"
-        />
+            <TextView
+                android:id="@+id/assistant_stepNumber"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:background="@color/orange">
+            </TextView>
+
+            <TextView
+                android:id="@+id/assistant_stepTitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@id/assistant_stepNumber"
+                android:background="@color/light_orange">
+            </TextView>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/assistant_stepDescription"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@id/assistant_stepHeader">
+
+            <TextView
+                android:padding="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/orange"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="Here is a sample description">
+            </TextView>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/assistant_timeLeft"
+            android:layout_width="match_parent"
+            android:layout_below="@id/assistant_stepDescription"
+            android:layout_height="match_parent">
+            <RelativeLayout
+                android:layout_width="180dp"
+                android:layout_height="60dp"
+                android:background="@color/green">
+                <TextView
+                    android:layout_width="150dp"
+                    android:layout_height="80dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="-46dp"
+                    android:textColor="@color/white"
+                    android:textSize="36sp"
+                    android:text="@string/timeLeft">
+                </TextView>
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/assistant_stepList"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/orange">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_centerInParent="true"
+                android:background="@color/orange"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:text="@string/etc" />
+        </RelativeLayout>
+    </RelativeLayout>
+    -->
 </android.support.v4.widget.DrawerLayout>
