--- a/CookPal/app/src/main/res/menu/recipe_activity_menu.xml
+++ b/CookPal/app/src/main/res/menu/recipe_activity_menu.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <!-- Search, should appear as action button -->
-    <item android:id="@+id/action_search"
-        android:icon="@android:drawable/ic_menu_delete"
+    <item android:id="@+id/start_assistant"
+        android:icon="@drawable/chef_icon"
         android:title="start_assistant"
         android:showAsAction="ifRoom" />
+
+    <item android:id="@+id/delete_recipe"
+        android:icon="@drawable/delete_recipe_icon"
+        android:title="delete_recipe"
+        android:showAsAction="ifRoom" />
+
+    <item android:id="@+id/add_recipe"
+        android:icon="@drawable/edit_recipe_icon"
+        android:title="add_recipe"
+        android:showAsAction="ifRoom"
+        android:onClick="addRecipeClicked"/>
+
+
 
 </menu>
