moved delete button to action bar and switched it to alert dialog

--- a/CookPal/app/src/main/res/layout/activity_recipe_list.xml
+++ b/CookPal/app/src/main/res/layout/activity_recipe_list.xml
@@ -13,12 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageButton
+        <!--<ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/deleteGroceryListButton"
             android:clickable="true"
-            android:src="@android:drawable/ic_menu_delete"/>
+            android:src="@android:drawable/ic_menu_delete"/>-->
 
         <ImageButton
             android:layout_width="wrap_content"
