--- a/CookPal/app/src/main/res/menu/recipe_activity_menu.xml
+++ b/CookPal/app/src/main/res/menu/recipe_activity_menu.xml
@@ -2,9 +2,9 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <!-- Search, should appear as action button -->
-    <item android:id="@+id/action_search"
+    <item android:id="@+id/deleteGroceryListButton"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="start_assistant"
+        android:title="Delete Recipe"
         android:showAsAction="ifRoom" />
 
 </menu>
