--- a/CookPal/app/src/main/res/layout/activity_assistant.xml
+++ b/CookPal/app/src/main/res/layout/activity_assistant.xml
@@ -104,11 +104,10 @@
         </RelativeLayout>
 
         <!-- List of steps that slides up (hidden until ETC button clicked/slid) -->
-        <LinearLayout
-            android:id="@+id/assistant_stepList"
+        <RelativeLayout
+            android:id="@+id/assistant_stepListLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="false"
             android:layout_alignParentTop="false"
             android:layout_centerInParent="true"
@@ -116,7 +115,16 @@
             android:content="@+id/content"
             android:orientation="vertical">
 
+            <!-- list of steps populated by AssistantActivity.java -->
+            <ListView
+                android:id="@+id/assistant_stepListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/assistant_etcButton">
+            </ListView>
+
             <Button
+                android:id="@+id/assistant_etcButton"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_centerHorizontal="true"
@@ -125,8 +133,9 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:text="@string/etc"
-                android:onClick="stepListToggle"/>
-        </LinearLayout>
+                android:onClick="stepListToggle"
+                android:layout_alignParentBottom="true"/>
+        </RelativeLayout>
     </RelativeLayout>
 
     <ListView
