--- a/CookPal/app/src/main/res/menu/recipe_activity_menu.xml
+++ b/CookPal/app/src/main/res/menu/recipe_activity_menu.xml
@@ -3,8 +3,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <!-- Search, should appear as action button -->
     <item android:id="@+id/deleteGroceryListButton"
-        android:icon="@android:drawable/ic_menu_delete"
+        android:icon="@drawable/delete_icon"
         android:title="Delete Recipe"
         android:showAsAction="ifRoom" />
-
+    <item android:id="@+id/addGroceryListButton"
+        android:icon="@drawable/add_icon"
+        android:title="Add Recipe"
+        android:showAsAction="ifRoom" />
 </menu>
