--- a/CookPal/app/src/main/res/layout/activity_recipe_list.xml
+++ b/CookPal/app/src/main/res/layout/activity_recipe_list.xml
@@ -18,10 +18,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/recipeListView"
             android:layout_weight="1"
+            android:divider="@null"
+            android:dividerHeight="0dp"
             android:layout_below="@+id/groceryListListTitle"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="54dp" />
+            android:layout_alignParentStart="true"/>
 
     </RelativeLayout>
 
