--- a/CookPal/app/src/main/res/layout/recipe_listview_entry.xml
+++ b/CookPal/app/src/main/res/layout/recipe_listview_entry.xml
@@ -1,35 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:padding="5dp">
 
     <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New CheckBox"
+        android:layout_width="35dp"
+        android:layout_height="50dp"
         android:id="@+id/recipeListviewEntry"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:checked="false"
         android:clickable="true"
-        android:enabled="true" />
+        android:enabled="true"
+        android:text=""
+        android:textSize="0sp"
+        android:textColor="@color/white"
+        android:background="@color/light_green"
+        android:layout_alignParentStart="true" />
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="Edit recipe"
+        android:src="@drawable/edit_icon"
         android:id="@+id/editRecipeButton"
-        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@color/green"
+        android:layout_marginLeft="2dp"/>
 
-    <ImageView
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:id="@+id/recipeTitle"
+        android:layout_toRightOf="@id/recipeListviewEntry"
+        android:layout_toLeftOf="@id/editRecipeButton"
+        android:layout_centerVertical="true"
+        android:gravity="center_vertical"
+        android:textColor="@color/white"
+        android:background="@color/green"
+        android:layout_marginLeft="2dp"
+        android:textSize="16dp"
+        android:padding="10dp"
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
+        android:maxLines="1"/>
+
+    <!--<ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/recipeEntryImageView"
         android:layout_alignBottom="@+id/addPictureButton"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true" />-->
 
 </RelativeLayout>
