--- a/CookPal/app/src/main/res/values/colors.xml
+++ b/CookPal/app/src/main/res/values/colors.xml
@@ -2,11 +2,11 @@
 <resources>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="blue">#6EAAAA</color>
-    <color name="green">#97B764</color>
-    <color name="light_green">#a5dc73</color>
-    <color name="orange">#f6ad54</color>
-    <color name="light_orange">#fbc099</color>
+    <color name="blue">#5cadab</color>
+    <color name="green">#89be61</color>
+    <color name="light_green">#aad973</color>
+    <color name="orange">#fba74d</color>
+    <color name="light_orange">#f9be97</color>
     <color name="sa_green">#14a804</color>
     <color name="stacked_green">#118504</color>
     <color name="accent_green">#97e08f</color>
