--- a/CookPal/app/src/main/res/values/colors.xml
+++ b/CookPal/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFF</color>
     <color name="blue">#6EAAAA</color>
     <color name="green">#97B764</color>
-    <color name="light_green">#a5dc73</color>
+    <color name="light_green">#a6d370</color>
     <color name="orange">#f6ad54</color>
     <color name="light_orange">#fbc099</color>
     <color name="sa_green">#14a804</color>
