--- a/CookPal/app/src/main/res/layout/activity_assistant.xml
+++ b/CookPal/app/src/main/res/layout/activity_assistant.xml
@@ -148,7 +148,7 @@
             android:layout_alignParentLeft="true"
             android:orientation="vertical"
             android:layout_marginTop="0dp"
-            android:background="@android:color/transparent">
+            android:background="@android:color/white">
 
             <!-- Step preview header: number and title -->
             <RelativeLayout
@@ -160,7 +160,7 @@
                     android:id="@+id/assistant_stepPreviewNumber"
                     android:layout_width="80dp"
                     android:layout_height="match_parent"
-                    android:background="@color/orange"
+                    android:background="@color/grey"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textSize="40sp"
@@ -173,7 +173,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_toRightOf="@id/assistant_stepPreviewNumber"
-                    android:background="@color/light_orange"
+                    android:background="@color/light_grey"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textSize="20sp"
@@ -189,7 +189,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_below="@id/assistant_stepPreviewHeader"
-                android:textColor="@color/orange"
+                android:textColor="@color/grey"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:text="@string/dummyStepDescrip">
@@ -204,7 +204,7 @@
                 <RelativeLayout
                     android:layout_width="180dp"
                     android:layout_height="60dp"
-                    android:background="@color/green">
+                    android:background="@color/grey">
                     <TextView
                         android:layout_width="150dp"
                         android:layout_height="80dp"
