--- a/CookPal/app/src/main/res/layout/activity_assistant.xml
+++ b/CookPal/app/src/main/res/layout/activity_assistant.xml
@@ -73,6 +73,7 @@
                 android:layout_below="@id/assistant_stepDescription"
                 android:layout_height="match_parent">
                 <RelativeLayout
+                    android:id="@+id/assistant_timeTakesText"
                     android:layout_width="180dp"
                     android:layout_height="60dp"
                     android:background="@color/green">
@@ -87,6 +88,31 @@
                         android:text="@string/timeLeft">
                     </TextView>
                 </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/assistant_timerDisplay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:layout_below="@id/assistant_timeTakesText"
+                    android:layout_centerInParent="true"
+                    android:textSize="50sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/green"
+                    android:text="00:03:00">
+                </TextView>
+
+                <Button
+                    android:id="@+id/assistant_nextStepButton"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/assistant_timerDisplay"
+                    android:background="@color/light_green"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="->"
+                    android:padding="10dp"
+                    android:onClick="moveToNextStep"/>
+
             </RelativeLayout>
 
             <!-- Step list slider/button -->
