--- a/CookPal/app/src/main/res/menu/recipe_activity_menu.xml
+++ b/CookPal/app/src/main/res/menu/recipe_activity_menu.xml
@@ -12,9 +12,20 @@
         android:showAsAction="ifRoom" />
 
     <item android:id="@+id/add_recipe"
-        android:icon="@drawable/edit_recipe_icon"
+        android:icon="@drawable/edit_icon"
         android:title="add_recipe"
         android:showAsAction="ifRoom"
         android:onClick="addRecipeClicked"/>
 
+
+
+    <!-- Search, should appear as action button -->
+    <item android:id="@+id/deleteGroceryListButton"
+        android:icon="@drawable/delete_icon"
+        android:title="Delete Recipe"
+        android:showAsAction="ifRoom" />
+    <item android:id="@+id/addGroceryListButton"
+        android:icon="@drawable/add_icon"
+        android:title="Add Recipe"
+        android:showAsAction="ifRoom" />
 </menu>
